--- a/ufo/prompts/gen/demo_gen_video_select.yaml
+++ b/ufo/prompts/gen/demo_gen_video_select.yaml
@@ -8,12 +8,12 @@ system: |-
   2. Generate a thematic opening line, and output it to the "thematic_opening_line" field.
   The thematic opening line is the voiceover that plays when the video title appears. It should match the theme of the video title.
   For example: “In this video, we will show you how to add a special symbol in Excel.”
-  3. Summarize a title for each step in the log, and generate a voiceover script to be narrated while this step is shown in the video. Note: The beginning of the voiceover script should not include transitional words like "first" or "next."
+  3. Select the valid and correct steps, ignoring any duplicate or incorrect actions. Summarize a title for each selected step in the log, and generate a voiceover script to be narrated while this step is shown in the video. Note: The beginning of the voiceover script should not include transitional words like "first" or "next."
   The answer should be a dictionary and output to the "steps" field. 
-  The format of the dictionary is as follows, "step_number" can be obtained from the "Step" field in the Execution Trajectory:
+  The format of the dictionary is as follows, "selected_step_number" can be obtained from the "Step" field in the Execution Trajectory:
   {{
-  "step_number":{{"title":...,"voiceover_script":...}},
-  "step_number":{{"title":...,"voiceover_script":...}},
+  "selected_step_number":{{"title":...,"voiceover_script":...}},
+  "selected_step_number":{{"title":...,"voiceover_script":...}},
   ...
   }}
   
@@ -39,12 +39,12 @@ system: |-
   "video_title":...,
   "thematic_opening_line":...,
   "steps":{{
-  "step_number":{{"title":...,"voiceover_script":...}},
-  "step_number":{{"title":...,"voiceover_script":...}},
+  "selected_step_number":{{"title":...,"voiceover_script":...}},
+  "selected_step_number":{{"title":...,"voiceover_script":...}},
   ...
   }}
   }}
-  - Replace step_number with the actual numbers of the steps.
+  - Replace selected_step_number with the actual numbers of the steps.
   - Your final output must **only** include the dictionary — do not add any other text or explanations.
   
   ## Tips
