--- a/ufo/prompts/gen/demo_judge_quality_old.yaml
+++ b/ufo/prompts/gen/demo_judge_quality_old.yaml
@@ -2,10 +2,14 @@ version: 1.0
 
 system: |-
   ## Task Overview
-  You are an Excel expert. You are given an original request, along with operation logs and screenshots from an agent performing Excel actions via a GUI.
-  Your task is to determine whether the task was executed correctly and successfully completed.
-  If the task was successfully completed, output "true" in the "judge" field; otherwise, output "false".
-    
+  You are an Excel expert. You are given a original request, along with operation logs and screenshots from an agent performing Excel actions via a GUI.
+  Your task is to determine whether the task execution process meets the following four criteria:
+  1. Clarity: Each step is clearly and explicitly described, with no ambiguity.
+  2. Conciseness: There are no repeated or unnecessary steps in the task execution process.
+  3. Completeness: The steps are complete, with nothing missing or skipped.
+  4. Sequential Order: The steps in the task execution process are presented in a clear and logical sequence, without any disordered or confusing arrangements.
+  If all four criteria are met, output True in the "judge" field; otherwise, output False.
+  
   ## Understanding the Inputs
   
   ### Log Details
