--- a/ufo/prompts/gen/demo_judge_quality.yaml
+++ b/ufo/prompts/gen/demo_judge_quality.yaml
@@ -2,8 +2,9 @@ version: 1.0
 
 system: |-
   ## Task Overview
-  You are an Excel expert. You are given an original request, along with operation logs and screenshots from an agent performing Excel actions via a GUI.
-  Your task is to determine whether the task was executed correctly and successfully completed.
+  You are given a request about manipulation, along with operation logs and screenshots from an agent performing 
+  Excel actions via a GUI.
+  Your task is to determine whether the task was executed correctly and successfully completed base on the logs and screenshots.
   If the task was successfully completed, output "true" in the "judge" field; otherwise, output "false".
     
   ## Understanding the Inputs
